--- a/examples/hello_qml/hello/ux/qml.qrc
+++ b/examples/hello_qml/hello/ux/qml.qrc
@@ -3,5 +3,6 @@
         <file>main.qml</file>
         <file>glcode.js</file>
         <file>three.js</file>
+        <file>drumroll.wav</file>
     </qresource>
 </RCC>
