--- a/distbuilder/qtifw_ui/simpletext.ui
+++ b/distbuilder/qtifw_ui/simpletext.ui
@@ -27,7 +27,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QLabel" name="description">
+    <widget class="QLabel" name="text">
      <property name="text">
       <string>[TEXT]</string>
      </property>
