Added onEnter event handler attribute to QtIfwUiPage.  Added uiPages to QtIfwControlScript to accomplish these callback for custom pages - which have no "entered" signal like a default page...

--- a/distbuilder/qtifw_ui/simpletext.ui
+++ b/distbuilder/qtifw_ui/simpletext.ui
@@ -27,7 +27,10 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QLabel" name="text">
+    <widget class="QLabel" name="description">
+     <property name="enabled">
+        <bool>true</bool>
+     </property>
      <property name="text">
       <string>[TEXT]</string>
      </property>
