Added foundation for class QtIfwPerformOperationPage and the derivative QtIfwRemovePriorInstallationPage.  Still ironing out kinks in them...

--- a/distbuilder/qtifw_ui/performoperation.ui
+++ b/distbuilder/qtifw_ui/performoperation.ui
@@ -23,13 +23,16 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>[TITLE]</string>
+   <string></string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QLabel" name="description">
+    <property name="visible">
+      <bool>false</bool>
+     </property>
      <property name="text">
-      <string>[TEXT]</string>
+      <string></string>
      </property>
      <property name="wordWrap">
       <bool>true</bool>
