--- a/distbuilder/qtifw_ui/performoperation.ui
+++ b/distbuilder/qtifw_ui/performoperation.ui
@@ -23,20 +23,27 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string></string>
+   <string/>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QLabel" name="description">
-    <property name="visible">
+     <property name="visible">
       <bool>false</bool>
      </property>
      <property name="text">
-      <string></string>
+      <string/>
      </property>
      <property name="wordWrap">
       <bool>true</bool>
      </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QPushButton" name="timerKludgeButton">
+	 <property name="visible">
+      <bool>false</bool>
+     </property>     
     </widget>
    </item>
    <item>
