--- a/distbuilder/qtifw_ui/altrunitcheckbox-widget.ui
+++ b/distbuilder/qtifw_ui/altrunitcheckbox-widget.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>AltRunItCheckBoxWidget</class>
- <widget class="QWidget" name="AltRunItCheckBoxWidget">
+ <class>[WIDGET_NAME]</class>
+ <widget class="QWidget" name="[WIDGET_NAME]">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -15,16 +15,22 @@
     <number>0</number>
    </property>
 	<item>
-    <widget class="QCheckBox" name="AltRunItCheckBox">
+    <widget class="QCheckBox" name="[CHECKBOX_NAME]">
      <property name="text">
-      <string></string>
-     </property>
-     <property name="checked">
-      <bool>true</bool>
+      <string>[TEXT]</string>
      </property>
      <property name="tristate">
       <bool>false</bool>
      </property>
+	<property name="visible">
+      <bool>[IS_VISIBLE]</bool>
+     </property>
+	<property name="enabled">
+      <bool>[IS_ENABLED]</bool>
+     </property>
+     <property name="checked">
+      <bool>[IS_CHECKED]</bool>
+     </property>               
     </widget>
    </item>   
   </layout>
